Waow. Ser ut som mycket, men bara massa saker som IntelliJ klagade på lol